--- a/public/templates/default/assets/css/custom.css
+++ b/public/templates/default/assets/css/custom.css
@@ -161,3 +161,61 @@ a.sc-ministats {
 .media__body .author-desc{
     font-size: 12px;
 }
+.item-preview .play-button--initially-visible {
+    visibility: visible;
+    opacity: .5;
+}
+.item-preview .play-button {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url(../images/watch-now.svg) no-repeat;
+    background-size: auto 40%;
+    background-position: center;
+    visibility: hidden;
+    opacity: 0;
+    -moz-transition: opacity 150ms ease-in-out;
+    -ms-transition: opacity 150ms ease-in-out;
+    -webkit-transition: opacity 150ms ease-in-out;
+    -o-transition: opacity 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out;
+    -webkit-transition: -webkit-transform 150ms ease-in-out;
+    -moz-transition: -moz-transform 150ms ease-in-out;
+    -o-transition: -o-transform 150ms ease-in-out;
+    transition: transform 150ms ease-in-out;
+}
+.item-thumbnail .play-button {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url(../images/watch-now.svg) no-repeat;
+    background-size: auto 40%;
+    background-position: center;
+    visibility: hidden;
+    opacity: 0;
+    -moz-transition: opacity 150ms ease-in-out;
+    -ms-transition: opacity 150ms ease-in-out;
+    -webkit-transition: opacity 150ms ease-in-out;
+    -o-transition: opacity 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out;
+    -webkit-transition: -webkit-transform 150ms ease-in-out;
+    -moz-transition: -moz-transform 150ms ease-in-out;
+    -o-transition: -o-transform 150ms ease-in-out;
+    transition: transform 150ms ease-in-out;
+}
+.item-preview .play-button--initially-visible {
+    visibility: visible;
+    opacity: .5;
+}
+.item-preview.-preview-live>a:hover .play-button, .item-preview.-preview-screenshot>a:hover .play-button{
+    visibility:visible;
+    opacity:1;
+    -webkit-transform:scale(1.2);
+    -ms-transform:scale(1.2);
+    -o-transform:scale(1.2);
+    transform:scale(1.2)
+}
