--- a/public/templates/default/assets/css/style.css
+++ b/public/templates/default/assets/css/style.css
@@ -1210,7 +1210,7 @@ iframe[name=google_conversion_frame] {
     margin-left: 8px;
 }
 .t-icon-list.-font-size-s {
-    font-size: 12px;
+    font-size: 14px;
 }
 .t-icon-list.-font-size-m, .t-icon-list {
     font-size: 16px;
@@ -1719,7 +1719,6 @@ iframe[name=google_conversion_frame] {
     display: inline-block;
     margin: 0;
     border: none;
-    border-radius: 4px;
     font-family: "Helvetica Neue",  Helvetica,  Arial,  sans-serif;
     text-align: center;
     text-decoration: none;
@@ -6999,14 +6998,14 @@ button.disabled, [role=button].disabled, [type=submit].disabled {
     background-color: #bababa;
     color: #dedede;
     cursor: not-allowed;
-}
+}/*
 .btn-icon:after {
     content: "";
     float: right;
     height: 17px;
     margin: 1px 0 0 15px;
     width: 17px;
-}
+}*/
 .btn-icon.bookmark:after {
     background-image: url(//public-assets.envato-static.com/assets/generated_sprites/common-31faa1249ec80c0744df246be56c9be2.png);
     background-position: -226px -37px;
@@ -7038,10 +7037,6 @@ button.disabled, [role=button].disabled, [type=submit].disabled {
 .btn-icon.list-view:after {
     background-image: url(//public-assets.envato-static.com/assets/generated_sprites/common-31faa1249ec80c0744df246be56c9be2.png);
     background-position: -117px -97px;
-}
-.btn-icon.live-preview:after {
-    background-image: url(../images/enroller.png);
-    background-size: 18px 18px;
 }
 .btn-icon.new-thread:after {
     background-image: url(//public-assets.envato-static.com/assets/generated_sprites/common-31faa1249ec80c0744df246be56c9be2.png);
@@ -7358,10 +7353,8 @@ button.disabled, [role=button].disabled, [type=submit].disabled {
     margin-right: 1px;
 }
 .btn--group-item:first-child {
-    border-radius: 4px 0 0 4px;
 }
 .btn--group-item:last-child {
-    border-radius: 0 4px 4px 0;
     margin-right: 0;
 }
 .global-header {
