fix done module Course (add-edit)

--- a/public/backend/assets/stylesheets/styles.css
+++ b/public/backend/assets/stylesheets/styles.css
@@ -8958,4 +8958,8 @@ canvas.round {
   display: table-cell;
   max-width: 220px;
 }
+.required:after {
+    content: " *";
+    color: #f00;
+}
 /*# sourceMappingURL=styles.css.map */
